--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 065 &nbsp;</span><a href="https://codepen.io/athoug/pen/OoNEBw" data-linktext="Pikachu" class="slide_from_bottom">Pikachu</a></h3>
             <h3><span class="days"> Day 064 &nbsp;</span><a href="../day64/index.html" data-linktext="Women in STEM" class="slide_from_bottom">Women in STEM</a></h3>
             <h3><span class="days"> Day 063 &nbsp;</span><a href="../day63/index.html" data-linktext="Twirling Circles" class="slide_from_bottom">Twirling Circles</a></h3>
             <h3><span class="days"> Day 062 &nbsp;</span><a href="../day62/index.html" data-linktext="Piano Keys" class="slide_from_bottom">Piano Keys</a></h3>
