html and css code

--- a/day66/index.html
+++ b/day66/index.html
@@ -1,26 +1,73 @@
-<!-- maKE SURE TO CONVERT INTO pug -->
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8">
+        <title>Polaroid</title>
+        <link rel="stylesheet" href="./master.css">
+    </head>
+    <body>
+        <div class="box">
+            <div class="polaroid">
+                <div class="top-camera">
+                    <div class="top-camera-copy"></div>
+                    <div class="lense">
+                        <div class="inner-section"></div>
+                        <div class="middle-section"></div>
+                        <div class="top-section"></div>
+                    </div>
+                    <div class="flash">
+                        <div class="flash-lense"></div>
+                        <div class="flair"></div>
+                    </div>
+                    <div class="stripe-top">
+                        <div class="dark-purple-top"></div>
+                        <div class="purple-top"></div>
+                        <div class="light-purple-top"></div>
+                    </div>
+                    <div class="balance-left"></div>
+                    <div class="balance-right"></div>
+                </div>
+                <div class="middle-camera">
+                    <div class="stripe-bottom">
+                        <div class="dark-purple-bottom"></div>
+                        <div class="purple-bottom"></div>
+                        <div class="light-purple-bottom"></div>
+                    </div>
+                </div>
+                <div class="bottom-camera">
+                    <div class="photo-output"></div>
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
 
-.box
-  .polaroid
-    .top-camera
-      .top-camera-copy
-      .lense
-        .inner-section
-        .middle-section
-        .top-section
-      .flash
-        .flash-lense
-        .flair
-      .stripe-top
-        .dark-purple-top
-        .purple-top
-        .light-purple-top
-      .balance-left
-      .balance-right
-    .middle-camera
-      .stripe-bottom
-        .dark-purple-bottom
-        .purple-bottom
-        .light-purple-bottom
-    .bottom-camera
-      .photo-output
+<!--
+    PUG Syntax
+
+    .box
+      .polaroid
+        .top-camera
+          .top-camera-copy
+          .lense
+            .inner-section
+            .middle-section
+            .top-section
+          .flash
+            .flash-lense
+            .flair
+          .stripe-top
+            .dark-purple-top
+            .purple-top
+            .light-purple-top
+          .balance-left
+          .balance-right
+        .middle-camera
+          .stripe-bottom
+            .dark-purple-bottom
+            .purple-bottom
+            .light-purple-bottom
+        .bottom-camera
+          .photo-output
+
+-->
