--- a/day67/index.html
+++ b/day67/index.html
@@ -13,13 +13,13 @@
 
       <section class="btn-container">
         <h3>buttons</h3>
-        <div class="btn">
+        <div class="btn btn-light-green">
           <p>learn more</p>
         </div>
-        <div class="btn">
+        <div class="btn btn-dark-green">
           <p>work with us</p>
         </div>
-        <div class="btn">
+        <div class="btn btn-purple">
           <p>upgrade pro</p>
         </div>
       </section>
