--- a/day67/index.html
+++ b/day67/index.html
@@ -5,6 +5,24 @@
     <title>CSS Variables | Button</title>
 
     <link rel="stylesheet" href="./css/master.css">
+
+    <!-- Google tracker -->
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-79841098-1', 'auto');
+        ga('send', 'pageview');
+    </script>
   </head>
   <body>
       <header>
@@ -25,7 +43,7 @@
       </section>
 
       <footer>
-        <p>Athoug Alsoughayer &copy; <span class="footer-links"><a href="">home</a> | <a href="#"> blog</a></span></p>
+        <p>Athoug Alsoughayer &copy; <span class="footer-links"><a href="../default.html">home</a> | <a href="http://athougcodesatnight.com"> blog</a></span></p>
       </footer>
   </body>
 </html>
