--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 067 &nbsp;</span><a href="../day67/index.html" data-linktext="CSS Variables | Buttons" class="slide_from_bottom">CSS Variables | Buttons</a></h3>
             <h3><span class="days"> Day 066 &nbsp;</span><a href="https://codepen.io/athoug/pen/KxMvGy" data-linktext="Polaroid" class="slide_from_bottom">Polaroid</a></h3>
             <h3><span class="days"> Day 065 &nbsp;</span><a href="https://codepen.io/athoug/pen/OoNEBw" data-linktext="Pikachu" class="slide_from_bottom">Pikachu</a></h3>
             <h3><span class="days"> Day 064 &nbsp;</span><a href="../day64/index.html" data-linktext="Women in STEM" class="slide_from_bottom">Women in STEM</a></h3>
