--- a/day68/index.html
+++ b/day68/index.html
@@ -8,14 +8,14 @@
     <body>
         <header>
             <h1>Select <span class="block">your</span> adventure</h1>
-            <img src="./img/" alt="night theme icon">
+            <img src="./img/moon.svg" alt="night theme icon">
         </header>
         <section class="cards-container">
             <div class="card">
                 <h2>Ghost land</h2>
                 <p>Have you seen that ghost</p>
                 <hr>
-                <img src="/img/" alt="">
+                <img src="./img/ghost.svg" alt="ghost image">
                 <p>Where you’re the only one who can talk and see gohsts and well things just get out of your control… </p>
                 <div class="btn">
                     <p>ENROLL</p>
@@ -26,7 +26,7 @@
                 <h2>Space Wars</h2>
                 <p>Hey! Where is my ship?</p>
                 <hr>
-                <img src="/img/" alt="">
+                <img src="./img/planet.svg" alt="planet image">
                 <p>The galaxies are at war, you are drafted to protect sector 43CD9 but wait, your ship…</p>
                 <div class="btn">
                     <p>ENROLL</p>
@@ -37,7 +37,7 @@
                 <h2>Mind map</h2>
                 <p>Are you going mad?</p>
                 <hr>
-                <img src="/img/" alt="">
+                <img src="./img/brain.svg" alt="brain image">
                 <p>Murders have been happening. Can you solve this case? But wait what’s up with all these brains…</p>
                 <div class="btn">
                     <p>ENROLL</p>
