--- a/day68/index.html
+++ b/day68/index.html
@@ -3,20 +3,39 @@
     <head>
         <meta charset="utf-8">
         <title>CSS Variables | Themes</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
         <link rel="stylesheet" href="./css/master.css">
+
+        <!-- Google tracker -->
+        <script>
+            (function(i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function() {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+            ga('create', 'UA-79841098-1', 'auto');
+            ga('send', 'pageview');
+        </script>
     </head>
     <body>
         <header>
             <h1>Select <span class="block">your</span> adventure</h1>
-            <img src="./img/moon.svg" alt="night theme icon">
+            <img src="./img/moon.svg" title="moon" alt="night theme icon" id="theme-btn">
         </header>
         <section class="cards-container">
             <div class="card">
                 <h2>Ghost land</h2>
-                <p>Have you seen that ghost</p>
+                <p class="subtitle">Have you seen that ghost</p>
                 <hr>
                 <img src="./img/ghost.svg" alt="ghost image">
-                <p>Where you’re the only one who can talk and see gohsts and well things just get out of your control… </p>
+                <p class="description">Where you’re the only one who can talk and see gohsts and well things just get out of your control… </p>
                 <div class="btn">
                     <p>ENROLL</p>
                 </div>
@@ -24,10 +43,10 @@
 
             <div class="card">
                 <h2>Space Wars</h2>
-                <p>Hey! Where is my ship?</p>
+                <p class="subtitle">Hey! Where is my ship?</p>
                 <hr>
                 <img src="./img/planet.svg" alt="planet image">
-                <p>The galaxies are at war, you are drafted to protect sector 43CD9 but wait, your ship…</p>
+                <p class="description">The galaxies are at war, you are drafted to protect sector 43CD9 but wait, your ship…</p>
                 <div class="btn">
                     <p>ENROLL</p>
                 </div>
@@ -35,14 +54,17 @@
 
             <div class="card">
                 <h2>Mind map</h2>
-                <p>Are you going mad?</p>
+                <p class="subtitle">Are you going mad?</p>
                 <hr>
                 <img src="./img/brain.svg" alt="brain image">
-                <p>Murders have been happening. Can you solve this case? But wait what’s up with all these brains…</p>
+                <p class="description">Murders have been happening. Can you solve this case? But wait what’s up with all these brains…</p>
                 <div class="btn">
                     <p>ENROLL</p>
                 </div>
             </div>
         </section>
+        <footer>
+            <p>Athoug Alsoughayer &copy; 2018 <span class="footer-links"><a href="../default.html">home</a> | <a href="http://athougcodesatnight.com"> blog</a></span></p>
+        </footer>
     </body>
 </html>
