--- a/day68/index.html
+++ b/day68/index.html
@@ -27,7 +27,7 @@
     <body>
         <header>
             <h1>Select <span class="block">your</span> adventure</h1>
-            <img src="./img/moon.svg" title="moon" alt="night theme icon" id="theme-btn">
+            <img src="./img/moon.svg" alt="night theme icon" id="theme-btn">
         </header>
         <section class="cards-container">
             <div class="card">
@@ -66,5 +66,7 @@
         <footer>
             <p>Athoug Alsoughayer &copy; 2018 <span class="footer-links"><a href="../default.html">home</a> | <a href="http://athougcodesatnight.com"> blog</a></span></p>
         </footer>
+
+        <script src="./js/script.js"></script>
     </body>
 </html>
