--- a/day68/index.html
+++ b/day68/index.html
@@ -62,10 +62,11 @@
                     <p>ENROLL</p>
                 </div>
             </div>
+
+            <div class="footer">
+                <p>Athoug Alsoughayer &copy; 2018 <span class="footer-links"><a href="../default.html">home</a> | <a href="http://athougcodesatnight.com"> blog</a></span></p>
+            </div>
         </section>
-        <footer>
-            <p>Athoug Alsoughayer &copy; 2018 <span class="footer-links"><a href="../default.html">home</a> | <a href="http://athougcodesatnight.com"> blog</a></span></p>
-        </footer>
 
         <script src="./js/script.js"></script>
     </body>
