still unfinished css file

--- a/day69/index.html
+++ b/day69/index.html
@@ -8,12 +8,16 @@
     <body>
 
         <div class="box">
+            <div class="top">
                 <div class="cubes red-top">
 
                 </div>
                 <div class="cubes dark-blue-top">
 
                 </div>
+            </div>
+
+            <div class="mid-1">
                 <div class="cubes pink-mid">
 
                 </div>
@@ -23,15 +27,23 @@
                 <div class="cubes blue-mid">
 
                 </div>
+            </div>
+
+            <div class="mid-2">
                 <div class="cubes red-mid">
 
                 </div>
                 <div class="cubes dark-blue-mid">
 
                 </div>
+            </div>
+
+            <div class="bottom">
                 <div class="cubes yellow-bottom">
 
                 </div>
+            </div>
+
         </div>
 
         <script type="text/javascript" src="./js/script.js"></script>
