--- a/day69/index.html
+++ b/day69/index.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>pixel heart</title>
-        <link rel="stylesheet" href="./css/master.css">
-    </head>
-    <body>
 
-        <div class="box">
-            <div class="top">
-                <div class="cubes red-top">
+<head>
+  <meta charset="utf-8">
+  <title>pixel heart</title>
+  <link rel="stylesheet" href="./css/master.css">
+</head>
 
-                </div>
-                <div class="cubes dark-blue-top">
+<body>
 
-                </div>
-            </div>
+  <div class="box">
+    <div class="cubes red-top">
 
-            <div class="mid-1">
-                <div class="cubes pink-mid">
+    </div>
 
-                </div>
-                <div class="cubes purple-mid">
+    <div class="cubes dark-blue-top">
 
-                </div>
-                <div class="cubes blue-mid">
+    </div>
 
-                </div>
-            </div>
+    <div class="cubes pink-mid">
 
-            <div class="mid-2">
-                <div class="cubes red-mid">
+    </div>
 
-                </div>
-                <div class="cubes dark-blue-mid">
+    <div class="cubes purple-mid">
 
-                </div>
-            </div>
+    </div>
 
-            <div class="bottom">
-                <div class="cubes yellow-bottom">
+    <div class="cubes blue-mid">
 
-                </div>
-            </div>
+    </div>
 
-        </div>
+    <div class="cubes red-mid">
 
-        <script type="text/javascript" src="./js/script.js"></script>
-    </body>
+    </div>
+
+    <div class="cubes dark-blue-mid">
+
+    </div>
+
+    <div class="cubes yellow-bottom">
+
+    </div>
+
+  </div>
+
+  <footer>
+    <p>Athoug Alsoughayer &copy; 2018 <span class="footer-links"><a href="../default.html">home</a> | <a href="http://athougcodesatnight.com"> blog</a></span></p>
+  </footer>
+  <script type="text/javascript" src="./js/script.js"></script>
+</body>
+
 </html>
