--- a/day69/index.html
+++ b/day69/index.html
@@ -11,35 +11,35 @@
 
   <div class="box">
     <div class="cubes red-top">
-
+      <input type="text">
     </div>
 
     <div class="cubes dark-blue-top">
-
+      <input type="text">
     </div>
 
     <div class="cubes pink-mid">
-
+      <input type="text">
     </div>
 
     <div class="cubes purple-mid">
-
+      <input type="text">
     </div>
 
     <div class="cubes blue-mid">
-
+      <input type="text">
     </div>
 
     <div class="cubes red-mid">
-
+      <input type="text">
     </div>
 
     <div class="cubes dark-blue-mid">
-
+      <input type="text">
     </div>
 
     <div class="cubes yellow-bottom">
-
+      <input type="text">
     </div>
 
   </div>
