for real for real final style

--- a/day69/index.html
+++ b/day69/index.html
@@ -8,12 +8,12 @@
 </head>
 
 <body>
-  <aside class="slider">
+  <section class="slider">
     <label>Move this 👇 </label>
     <input class="booth-slider" type="range" min="-50" max="50" value="-50" step="5"/>
-  </aside>
+  </section>
 
-  <div class="box">
+  <section class="box">
     <div class="cubes red-top" id="box1">
       <input type="text">
     </div>
@@ -46,7 +46,7 @@
       <input type="text">
     </div>
 
-  </div>
+  </section>
 
   <section class="instructions">
     👉🏻 Move the slider<br/>
