--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 069 &nbsp;</span><a href="../day69/index.html" data-linktext="Pixel Heart" class="slide_from_bottom">Pixel Heart</a></h3>
             <h3><span class="days"> Day 068 &nbsp;</span><a href="../day68/index.html" data-linktext="CSS Variables | Themes" class="slide_from_bottom">CSS Variables | Themes</a></h3>
             <h3><span class="days"> Day 067 &nbsp;</span><a href="../day67/index.html" data-linktext="CSS Variables | Buttons" class="slide_from_bottom">CSS Variables | Buttons</a></h3>
             <h3><span class="days"> Day 066 &nbsp;</span><a href="https://codepen.io/athoug/pen/KxMvGy" data-linktext="Polaroid" class="slide_from_bottom">Polaroid</a></h3>
