--- a/day68/index.html
+++ b/day68/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CSS Variables | Themes</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
         <link rel="stylesheet" href="./css/master.css">
