--- a/day70/index.html
+++ b/day70/index.html
@@ -3,6 +3,8 @@
      <head>
          <meta charset="utf-8">
          <title>Happiness Reason</title>
+         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel="stylesheet">
+         
          <link rel="stylesheet" href="./css/master.css">
 
          <!-- Libraries -->
