--- a/day70/index.html
+++ b/day70/index.html
@@ -4,14 +4,15 @@
          <meta charset="utf-8">
          <title>Happiness Reason</title>
          <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel="stylesheet">
-         
+
          <link rel="stylesheet" href="./css/master.css">
 
          <!-- Libraries -->
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
          <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
          <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
          <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-
+         <script type="text/javascript" language="javascript" src="./js/data.json"></script> 
      </head>
      <body>
          <div id="root"></div>
