--- a/day70/index.html
+++ b/day70/index.html
@@ -2,6 +2,8 @@
  <html lang="en" dir="ltr">
      <head>
          <meta charset="utf-8">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
          <title>Happiness Reason</title>
          <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel="stylesheet">
 
@@ -12,10 +14,32 @@
          <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
          <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
          <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-         <script type="text/javascript" language="javascript" src="./js/data.json"></script> 
+         <script type="text/javascript" language="javascript" src="./js/data.json"></script>
+
+         <!-- Google tracker -->
+         <script>
+             (function(i, s, o, g, r, a, m) {
+                 i['GoogleAnalyticsObject'] = r;
+                 i[r] = i[r] || function() {
+                     (i[r].q = i[r].q || []).push(arguments)
+                 }, i[r].l = 1 * new Date();
+                 a = s.createElement(o),
+                     m = s.getElementsByTagName(o)[0];
+                 a.async = 1;
+                 a.src = g;
+                 m.parentNode.insertBefore(a, m)
+             })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+             ga('create', 'UA-79841098-1', 'auto');
+             ga('send', 'pageview');
+         </script>
      </head>
      <body>
          <div id="root"></div>
+         
+         <footer>
+           <p>Athoug Alsoughayer &copy; 2018 <span class="footer-links"><a href="../default.html">home</a> | <a href="http://athougcodesatnight.com"> blog</a></span></p>
+         </footer>
 
          <script type="text/babel" src="./js/script.js"></script>
      </body>
