--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 070 &nbsp;</span><a href="../day70/index.html" data-linktext="Happiness Reasons" class="slide_from_bottom">Happiness Reasons</a></h3>
             <h3><span class="days"> Day 069.5 &nbsp;</span><a href="https://codepen.io/athoug/pen/JaENWe?editors=1100" data-linktext="Pizza | Pure CSS" class="slide_from_bottom">Pizza | Pure CSS</a></h3>
             <h3><span class="days"> Day 069 &nbsp;</span><a href="../day69/index.html" data-linktext="Pixel Heart" class="slide_from_bottom">Pixel Heart</a></h3>
             <h3><span class="days"> Day 068 &nbsp;</span><a href="../day68/index.html" data-linktext="CSS Variables | Themes" class="slide_from_bottom">CSS Variables | Themes</a></h3>
