1/3 of the rocket done

--- a/day71/index.html
+++ b/day71/index.html
@@ -6,7 +6,25 @@
         <link rel="stylesheet" href="./css/master.css">
     </head>
     <body>
-
+        <div class="box">
+            <!-- tank -->
+            <div class="tank">
+                <div class="tank-stripe"></div>
+            </div>
+            <!-- fule -->
+            <div class="rocket-fule-left">
+                <div class="fule-stripe-top"></div>
+                <div class="fule-stripe-mid"></div>
+                <div class="square"></div>
+                <div class="fule-stripe-bottom"></div>
+            </div>
+            <div class="rocket-fule-right">
+                <div class="fule-stripe-top"></div>
+                <div class="fule-stripe-mid"></div>
+                <div class="square"></div>
+                <div class="fule-stripe-bottom"></div>
+            </div>
+        </div>
         <script src="./js/script.js"></script>
     </body>
 </html>
