rocket almost done

--- a/day71/index.html
+++ b/day71/index.html
@@ -24,6 +24,27 @@
                 <div class="square"></div>
                 <div class="fule-stripe-bottom"></div>
             </div>
+            <!-- rocket -->
+            <div class="rocket">
+                <div class="top-rocket"></div>
+                <div class="mid-rocket">
+                    <div class="rocket-stripe"></div>
+                    <div class="rocket-line-mid"></div>
+                </div>
+                <div class="bottom-rocket">
+                    <div class="rocket-line-bottom"></div>
+                </div>
+                <div class="rocket-engine-left">
+                    <div class="rocket-engine-stripe-top"></div>
+                    <div class="rocket-engine-stripe-left"></div>
+                    <div class="rocket-engine-stripe-right"></div>
+                </div>
+                <div class="rocket-engine-right">
+                    <div class="rocket-engine-stripe-top"></div>
+                    <div class="rocket-engine-stripe-left"></div>
+                    <div class="rocket-engine-stripe-right"></div>
+                </div>
+            </div>
         </div>
         <script src="./js/script.js"></script>
     </body>
