--- a/day71/index.html
+++ b/day71/index.html
@@ -34,16 +34,8 @@
                 <div class="bottom-rocket">
                     <div class="rocket-line-bottom"></div>
                 </div>
-                <div class="rocket-engine-left">
-                    <div class="rocket-engine-stripe-top"></div>
-                    <div class="rocket-engine-stripe-left"></div>
-                    <div class="rocket-engine-stripe-right"></div>
-                </div>
-                <div class="rocket-engine-right">
-                    <div class="rocket-engine-stripe-top"></div>
-                    <div class="rocket-engine-stripe-left"></div>
-                    <div class="rocket-engine-stripe-right"></div>
-                </div>
+                <div class="rocket-engine-left"></div>
+                <div class="rocket-engine-right"></div>
             </div>
         </div>
         <script src="./js/script.js"></script>
