--- a/day71/index.html
+++ b/day71/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Rocket Launch | Pure CSS</title>
+        <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
         <link rel="stylesheet" href="./css/master.css">
     </head>
     <body>
@@ -38,6 +39,35 @@
                 <div class="rocket-engine-right"></div>
             </div>
         </div>
+
+        <!-- blast -->
+        <div class="blast"></div>
+
+        <!-- clouds -->
+        <div class="light-purple-cloud-1"></div>
+        <div class="light-purple-cloud-2"></div>
+        <div class="light-purple-cloud-3"></div>
+        <div class="light-purple-cloud-4"></div>
+        <div class="light-purple-cloud-5"></div>
+        <div class="light-purple-cloud-6"></div>
+
+        <div class="white-cloud-1"></div>
+        <div class="white-cloud-2"></div>
+        <div class="white-cloud-3"></div>
+        <div class="white-cloud-4"></div>
+        <div class="white-cloud-5"></div>
+        <div class="white-cloud-6"></div>
+        <div class="white-cloud-7"></div>
+
+        <!-- text -->
+        <div class="title">
+            Reach for the stars
+        </div>
+
+        <footer>
+          <p>Athoug Alsoughayer &copy; 2018 <span class="footer-links"><a href="../default.html">home</a> | <a href="http://athougcodesatnight.com"> blog</a></span></p>
+        </footer>
+
         <script src="./js/script.js"></script>
     </body>
 </html>
