--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 073 &nbsp;</span><a href="https://codepen.io/athoug/pen/YOaPVv" data-linktext="Master Sword | Pure CSS" class="slide_from_bottom">Master Sword | Pure CSS</a></h3>
             <h3><span class="days"> Day 072 &nbsp;</span><a href="https://codepen.io/athoug/pen/ZMrGmV" data-linktext="Navi | Pure CSS" class="slide_from_bottom">Navi | Pure CSS</a></h3>
             <h3><span class="days"> Day 071 &nbsp;</span><a href="../day71/index.html" data-linktext="Rocket Blast" class="slide_from_bottom">Rocket Blast</a></h3>
             <h3><span class="days"> Day 070 &nbsp;</span><a href="../day70/index.html" data-linktext="Happiness Reasons" class="slide_from_bottom">Happiness Reasons</a></h3>
