--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 076 &nbsp;</span><a href="https://codepen.io/athoug/pen/aaKMVX" data-linktext="Beaver | Daily CSS image Challenge" class="slide_from_bottom">Beaver | Daily CSS image Challenge</a></h3>
             <h3><span class="days"> Day 075 &nbsp;</span><a href="https://codepen.io/athoug/pen/QVrYop" data-linktext="Elephant | Daily CSS image Challenge" class="slide_from_bottom">Elephant | Daily CSS image Challenge</a></h3>
             <h3><span class="days"> Day 074 &nbsp;</span><a href="https://codepen.io/athoug/pen/OoZPPE" data-linktext="Bear Cub | Daily CSS image Challenge" class="slide_from_bottom">Bear Cub | Daily CSS image Challenge</a></h3>
             <h3><span class="days"> Day 073 &nbsp;</span><a href="https://codepen.io/athoug/pen/YOaPVv" data-linktext="Master Sword | Pure CSS" class="slide_from_bottom">Master Sword | Pure CSS</a></h3>
