--- a/day79/index.html
+++ b/day79/index.html
@@ -21,5 +21,7 @@
           <div class="leg-left"></div>
           <div class="leg-right"></div>
         </div>
+
+        <script src="js/script.js"></script>
     </body>
 </html>
