--- a/day79/index.html
+++ b/day79/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Clock | Daily Csss Challenge</title>
-        <link rel="stylesheet" href="./css/master.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Orbitron|Roboto">
+        <link rel="stylesheet" href="/css/master.css">
     </head>
     <body>
         <div class="box">
