--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 079 &nbsp;</span><a href="https://codepen.io/athoug/pen/aaaQPa" data-linktext="Clock | Daily CSS Challenge" class="slide_from_bottom">Clock | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 078 &nbsp;</span><a href="https://codepen.io/athoug/pen/xaaRrg" data-linktext="Snorlax | Daily CSS Challenge" class="slide_from_bottom">Snorlax | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 077 &nbsp;</span><a href="https://codepen.io/athoug/pen/YOjJjj" data-linktext="Tiger | Daily CSS Challenge" class="slide_from_bottom">Tiger | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 076 &nbsp;</span><a href="https://codepen.io/athoug/pen/aaKMVX" data-linktext="Beaver | Daily CSS Challenge" class="slide_from_bottom">Beaver | Daily CSS Challenge</a></h3>
