--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 081 &nbsp;</span><a href="https://codepen.io/athoug/pen/vzvKBJ" data-linktext="Notepad | Daily CSS Challenge" class="slide_from_bottom">Notepad | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 080 &nbsp;</span><a href="https://codepen.io/athoug/pen/mGzaoO" data-linktext="Ruler | Daily CSS Challenge" class="slide_from_bottom">Ruler | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 079 &nbsp;</span><a href="https://codepen.io/athoug/pen/aaaQPa" data-linktext="Clock | Daily CSS Challenge" class="slide_from_bottom">Clock | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 078 &nbsp;</span><a href="https://codepen.io/athoug/pen/xaaRrg" data-linktext="Snorlax | Daily CSS Challenge" class="slide_from_bottom">Snorlax | Daily CSS Challenge</a></h3>
