--- a/day82/index.html
+++ b/day82/index.html
@@ -25,49 +25,49 @@
             </tr>
 
             <tr>
-              <td>01</td>
-              <td>02</td>
-              <td>03</td>
-              <td>04</td>
-              <td>05</td>
-              <td>06</td>
-              <td>07</td>
+              <td id="day-1">01</td>
+              <td id="day-2">02</td>
+              <td id="day-3">03</td>
+              <td id="day-4">04</td>
+              <td id="day-5">05</td>
+              <td id="day-6">06</td>
+              <td id="day-7">07</td>
             </tr>
 
             <tr>
-              <td>08</td>
-              <td>09</td>
-              <td>10</td>
-              <td>11</td>
-              <td>12</td>
-              <td>13</td>
-              <td>14</td>
+              <td id="day-8">08</td>
+              <td id="day-9">09</td>
+              <td id="day-10">10</td>
+              <td id="day-11">11</td>
+              <td id="day-12">12</td>
+              <td id="day-13">13</td>
+              <td id="day-14">14</td>
             </tr>
 
             <tr>
-              <td>15</td>
-              <td>16</td>
-              <td>17</td>
-              <td>18</td>
-              <td>19</td>
-              <td class="active">20</td>
-              <td>21</td>
+              <td id="day-15">15</td>
+              <td id="day-16">16</td>
+              <td id="day-17">17</td>
+              <td id="day-18">18</td>
+              <td id="day-19">19</td>
+              <td id="day-20">20</td>
+              <td id="day-21">21</td>
             </tr>
 
             <tr>
-              <td>22</td>
-              <td>23</td>
-              <td>24</td>
-              <td>25</td>
-              <td>26</td>
-              <td>27</td>
-              <td>28</td>
+              <td id="day-22">22</td>
+              <td id="day-23">23</td>
+              <td id="day-24">24</td>
+              <td id="day-25">25</td>
+              <td id="day-26">26</td>
+              <td id="day-27">27</td>
+              <td id="day-28">28</td>
             </tr>
 
             <tr>
-              <td>29</td>
-              <td>30</td>
-              <td>31</td>
+              <td id="day-29">29</td>
+              <td id="day-30">30</td>
+              <td id="day-31">31</td>
               <td></td>
               <td></td>
               <td></td>
