--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 083 &nbsp;</span><a href="https://codepen.io/athoug/pen/MqxNBy" data-linktext="Pencil Jar | Daily CSS Challenge" class="slide_from_bottom">Pencil Jar | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 082 &nbsp;</span><a href="https://codepen.io/athoug/pen/NLodwe" data-linktext="Calendar | Daily CSS Challenge" class="slide_from_bottom">Calendar | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 081 &nbsp;</span><a href="https://codepen.io/athoug/pen/vzvKBJ" data-linktext="Notepad | Daily CSS Challenge" class="slide_from_bottom">Notepad | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 080 &nbsp;</span><a href="https://codepen.io/athoug/pen/mGzaoO" data-linktext="Ruler | Daily CSS Challenge" class="slide_from_bottom">Ruler | Daily CSS Challenge</a></h3>
