--- a/day86/index.html
+++ b/day86/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Tacho | Daily css images</title>
-        <link rel="stylesheet" href="/css/master.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico"rel="stylesheet">
         <link rel="stylesheet" href="./css/master.css">
     </head>
     <body>
