--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 087 &nbsp;</span><a href="https://codepen.io/athoug/pen/GXVoxE" data-linktext="Cheesecake | Daily CSS Challenge" class="slide_from_bottom">Cheesecake | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 086 &nbsp;</span><a href="https://codepen.io/athoug/pen/pOXvWY" data-linktext="Taco | Daily CSS Challenge" class="slide_from_bottom">Taco | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 085 &nbsp;</span><a href="https://codepen.io/athoug/pen/aarVXe" data-linktext="Hamburger | Daily CSS Challenge" class="slide_from_bottom">Hamburger | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 084 &nbsp;</span><a href="https://codepen.io/athoug/pen/wEZqaE" data-linktext="Pizza | Daily CSS Challenge" class="slide_from_bottom">Pizza | Daily CSS Challenge</a></h3>
