--- a/day88/index.html
+++ b/day88/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Pie | Daily css images</title>
+        <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
         <link rel="stylesheet" href="./css/master.css">
     </head>
     <body>
