--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 090 &nbsp;</span><a href="https://codepen.io/athoug/pen/LgEGra" data-linktext="Zombie | Daily CSS Challenge" class="slide_from_bottom">Zombie | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 089 &nbsp;</span><a href="https://codepen.io/athoug/pen/rqNwOe" data-linktext="Frankenstein | Daily CSS Challenge" class="slide_from_bottom">Frankenstein | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 088 &nbsp;</span><a href="https://codepen.io/athoug/pen/EdYoBq" data-linktext="Pie | Daily CSS Challenge" class="slide_from_bottom">Pie | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 087 &nbsp;</span><a href="https://codepen.io/athoug/pen/GXVoxE" data-linktext="Cheesecake | Daily CSS Challenge" class="slide_from_bottom">Cheesecake | Daily CSS Challenge</a></h3>
