--- a/default.html
+++ b/default.html
@@ -75,6 +75,7 @@
 
     <section>
         <div class="container">
+            <h3><span class="days"> Day 092 &nbsp;</span><a href="https://codepen.io/athoug/pen/QZbOxP" data-linktext="Werewolf | Daily CSS Challenge" class="slide_from_bottom">Werewolf | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 091 &nbsp;</span><a href="https://codepen.io/athoug/pen/rqaqpR" data-linktext="Vampire | Daily CSS Challenge" class="slide_from_bottom">Vampire | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 090 &nbsp;</span><a href="https://codepen.io/athoug/pen/LgEGra" data-linktext="Zombie | Daily CSS Challenge" class="slide_from_bottom">Zombie | Daily CSS Challenge</a></h3>
             <h3><span class="days"> Day 089 &nbsp;</span><a href="https://codepen.io/athoug/pen/rqNwOe" data-linktext="Frankenstein | Daily CSS Challenge" class="slide_from_bottom">Frankenstein | Daily CSS Challenge</a></h3>
